Added Swagger documentation tool and docs for product. Removed login info from application.properties for using local profiles. Updated .gitignore for local profile. Sonar-lint analysed mistakes fixed.